--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import '#/assets/styles/index.css'
 ---
 
 <html lang="en">
@@ -11,6 +11,6 @@
     <title>Astro</title>
   </head>
   <body>
-    <h1>Astro</h1>
+    <h1 class="text-teal-700 text-3xl">Astro</h1>
   </body>
 </html>
