--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -2,3 +2,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.primary-text {
+  @apply text-primary font-bold text-3xl;
+}
+
+.secondary-text {
+  @apply text-gray text-sm;
+}
+
+.orange-text {
+  @apply text-orange font-semibold text-2xl;
+}
+
+/* gradients */
+.blue-gradient {
+  background-image: 'linear-gradient(97.05deg, #4066ff 3.76%, #2949c6 100%)';
+}
+
+.orange-gradient {
+  background-image: 'linear-gradient(270deg, #ffb978 0%, #ff922d 100%)';
+}
