--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,6 @@ import '#/assets/styles/index.css'
     <title>Astro</title>
   </head>
   <body>
-    <h1 class="text-teal-700 text-3xl">Astro</h1>
+    <h1>Astro</h1>
   </body>
 </html>
