add images in images profile, add poppins font with fount-source package

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,9 @@
 ---
 import '#/assets/styles/index.css'
+import '@fontsource/poppins'
+
+import Footer from '@/components/Sections/Footer/index.astro'
+import Header from '@/components/Sections/Header/index.astro'
 ---
 
 <html lang="en">
@@ -11,6 +15,8 @@ import '#/assets/styles/index.css'
     <title>Astro</title>
   </head>
   <body>
-    <h1>Astro</h1>
+    <Header />
+    <main></main>
+    <Footer />
   </body>
 </html>
