--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
 .primary-text {
   @apply text-primary font-bold text-3xl;
 }
