--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,9 @@
 import '#/assets/styles/index.css'
 import '@fontsource/poppins'
 
-import Footer from '@/components/Sections/Footer/index.astro'
 import Header from '@/components/Sections/Header/index.astro'
+import Hero from '@/components/Sections/Hero/index.astro'
+import Footer from '@/components/Sections/Footer/index.astro'
 ---
 
 <html lang="en">
@@ -16,7 +17,9 @@ import Header from '@/components/Sections/Header/index.astro'
   </head>
   <body>
     <Header />
-    <main></main>
+    <main>
+      <Hero />
+    </main>
     <Footer />
   </body>
 </html>
