--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -7,6 +7,18 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.padding {
+  @apply p-[25px];
+}
+
+.flex-center {
+  @apply flex items-center gap-x-5;
+}
+
+.max-w {
+  @apply w-full max-w-7xl mx-auto;
+}
+
 .primary-text {
   @apply text-primary font-bold text-3xl;
 }
@@ -21,9 +33,9 @@ body {
 
 /* gradients */
 .blue-gradient {
-  background-image: 'linear-gradient(97.05deg, #4066ff 3.76%, #2949c6 100%)';
+  background-image: linear-gradient(97.05deg, #4066ff 3.76%, #2949c6 100%);
 }
 
 .orange-gradient {
-  background-image: 'linear-gradient(270deg, #ffb978 0%, #ff922d 100%)';
+  background-image: linear-gradient(270deg, #ffb978 0%, #ff922d 100%);
 }
