--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -15,6 +15,10 @@ body {
   @apply flex items-center gap-x-5;
 }
 
+.flex-end {
+  @apply flex items-end gap-x-5;
+}
+
 .max-w {
   @apply w-full max-w-7xl mx-auto;
 }
