--- a/src/components/Sections/Hero/index.astro
+++ b/src/components/Sections/Hero/index.astro
@@ -1,10 +1,34 @@
 ---
-
+import Button from '@/components/Buttons/Button.astro'
+import Input from '@/components/Inputs/Input.astro'
+import images from '@/picture'
+import { MapPin } from 'lucide-react'
 ---
 
 <section class="bg-black">
-  <div class="max-w padding">
-    <article></article>
-    <article></article>
+  <div class="max-w flex-end justify-between padding">
+    <article class="basis-2/5 space-y-8">
+      <h1 class="text-white text-7xl font-semibold relative z-10">
+        Discover <br /> Most Suitable <br /> Property
+        <span
+          class="absolute -z-10 right-[160px] -top-2 rounded-full w-[55px] h-[55px] orange-gradient block"
+        ></span>
+      </h1>
+      <p class="text-white">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+        doloremque quam vitae culpa omnis illo? Dolores explicabo temporibus
+      </p>
+      <div class="flex items-center gap-x-1 bg-white max-w-max p-2 rounded-md">
+        <MapPin color="#4066ff" size={25} />
+        <Input type="text" />
+        <Button title="Search" otherStyles="blue-gradient" />
+      </div>
+    </article>
+    <img
+      class="rounded-tl-[50%] rounded-tr-[50%] border-[8px] border-secondary"
+      src={images.hero.src}
+      width="400"
+      alt="Hero Image"
+    />
   </div>
 </section>
