--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,8 @@
 ---
-import '#/assets/styles/index.css'
-import '@fontsource/poppins'
-
-import Header from '@/components/Sections/Header/index.astro'
 import Hero from '@/components/Sections/Hero/index.astro'
-import Footer from '@/components/Sections/Footer/index.astro'
+import Layout from '@/pages/layout.astro'
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <Header />
-    <main>
-      <Hero />
-    </main>
-    <Footer />
-  </body>
-</html>
+<Layout>
+  <Hero />
+</Layout>
