--- a/src/pages/layout.astro
+++ b/src/pages/layout.astro
@@ -15,7 +15,7 @@ import Header from '@/components/Sections/Header/index.astro'
     <meta name="generator" content={Astro.generator} />
     <title>Astro</title>
   </head>
-  <body>
+  <body class="pb-[500px]">
     <Header />
     <main>
       <slot />
